[package]
name = "access_log_parser"
authors = [ "lei.zhao <oizhaolei@gmail.com>" ]
version = "0.0.1"
edition = "2021"
description = "parse access-log-file export to csv file by regex"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
regex = "1.10.5"

[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
pipeline_dispatch = { path = "/usr/bin/pipeline_dispatch" }
